--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/Brandon-Guerra/Influx#readme",
   "dependencies": {
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "moment": "^2.10.6",
+    "mysql": "^2.5.4"
   }
 }
